[gd_scene load_steps=28 format=3 uid="uid://biclrcttnb7ol"]

[ext_resource type="Script" path="res://scenes/game_object/cyclops_boss/cyclops_boss.gd" id="1_1r3j4"]
[ext_resource type="PackedScene" uid="uid://c0mg8kciflbyj" path="res://scenes/component/health_component.tscn" id="2_3r6um"]
[ext_resource type="PackedScene" uid="uid://d0j6lqvla2s5s" path="res://scenes/component/vial_drop_component.tscn" id="3_rkgvq"]
[ext_resource type="PackedScene" uid="uid://de83vidky3h47" path="res://scenes/component/velocity_component.tscn" id="4_o5nvk"]
[ext_resource type="PackedScene" uid="uid://cg5mcdcvufs01" path="res://scenes/component/hit_flash_component.tscn" id="5_ss3jb"]
[ext_resource type="Shader" path="res://scenes/component/hit_flash_component.gdshader" id="6_ocd1s"]
[ext_resource type="PackedScene" uid="uid://bvocibb1hy1xd" path="res://scenes/component/death_component.tscn" id="7_xahdn"]
[ext_resource type="PackedScene" uid="uid://bn7prcg2wsqx3" path="res://scenes/component/hurt_box_component.tscn" id="8_q7008"]
[ext_resource type="Texture2D" uid="uid://b2gxdlhdl18ps" path="res://assets/particle.png" id="9_8xwt8"]
[ext_resource type="Texture2D" uid="uid://bt7lhsv3x0gxs" path="res://scenes/game_object/cyclops_boss/cyclops_boss.png" id="9_j8qyt"]
[ext_resource type="PackedScene" uid="uid://ctf2yfr15lta4" path="res://scenes/component/random_stream_player_2d_component.tscn" id="10_3x582"]
[ext_resource type="AudioStream" uid="uid://bc12yvscfs7gn" path="res://assets/audio/footstep_carpet_000.ogg" id="11_q5g56"]
[ext_resource type="AudioStream" uid="uid://c6mbp2d35acxo" path="res://assets/audio/footstep_carpet_001.ogg" id="12_ysp1u"]
[ext_resource type="AudioStream" uid="uid://b8suv2vvcmsoe" path="res://assets/audio/footstep_carpet_002.ogg" id="13_c56n8"]
[ext_resource type="AudioStream" uid="uid://d3ycujqxqxjin" path="res://assets/audio/footstep_carpet_003.ogg" id="14_wq0o8"]
[ext_resource type="AudioStream" uid="uid://dairhf8gy5oe7" path="res://assets/audio/footstep_carpet_004.ogg" id="15_o4sp6"]

[sub_resource type="Animation" id="Animation_u5mk0"]
resource_name = "Entrance"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.0669859, 0.0669859),
"update": 0,
"values": [Vector2(0, -100), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.148651, 1),
"update": 0,
"values": [-0.267035, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.217638, 0.217638),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:finished_entrance")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:has_jumped")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_moghx"]
resource_name = "Jump"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.8, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(3, 1.91667), Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.8, 1.1, 1.5),
"transitions": PackedFloat32Array(12.996, 12.996, 0.237841, 0.237841),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4.33333), Vector2(0, 0), Vector2(0, -40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:has_jumped")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBoxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:once_check")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_no68i"]
resource_name = " Land"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.8, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3, 3), Vector2(3, 1.91667), Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.8, 1.1, 1.5),
"transitions": PackedFloat32Array(0.237841, 0.237841, 12.996, 12.996),
"update": 0,
"values": [Vector2(0, -40), Vector2(0, 0), Vector2(0, 4.33333), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:has_jumped")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HurtBoxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/CPUParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.8, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Timer:autostart")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qbq5t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 100)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_lq2oh"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533, -0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4mbg4"]
_data = {
"Entrance": SubResource("Animation_u5mk0"),
"Jump": SubResource("Animation_moghx"),
"Landing": SubResource("Animation_no68i"),
"RESET": SubResource("Animation_qbq5t"),
"walk": SubResource("Animation_lq2oh")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mcpm5"]
resource_local_to_scene = true
shader = ExtResource("6_ocd1s")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gv14e"]
radius = 12.0

[sub_resource type="Curve" id="Curve_pgasl"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.969231, 0.0568991), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_a3cca"]
colors = PackedColorArray(0.262745, 0.188235, 0, 0.698039, 0.207843, 0.207843, 0.207843, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_c0rv1"]
radius = 5.0

[node name="CyclopsBoss" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(3, 3)
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_1r3j4")
finished_entrance = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4mbg4")
}
autoplay = "Entrance"

[node name="HealthComponent" parent="." instance=ExtResource("2_3r6um")]
max_health = 500.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_rkgvq")]
drop_percent = 1.0
health_component = NodePath("../HealthComponent")

[node name="VelocityComponent" parent="." instance=ExtResource("4_o5nvk")]
max_speed = 400
acceleration = 100.0

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_ss3jb")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_mcpm5")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("7_xahdn")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_q7008")]
visible = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_gv14e")
disabled = true

[node name="Visuals" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="Visuals"]
position = Vector2(0, 12)
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource("9_8xwt8")
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 200.0
scale_amount_min = 5.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_pgasl")
color_ramp = SubResource("Gradient_a3cca")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, 100)
scale = Vector2(3, 3)
texture = ExtResource("9_j8qyt")
offset = Vector2(0, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(8, 8)
shape = SubResource("CircleShape2D_c0rv1")

[node name="HitAudioPlayerComponent" parent="." instance=ExtResource("10_3x582")]
stream = ExtResource("11_q5g56")
streams = Array[AudioStream]([ExtResource("11_q5g56"), ExtResource("12_ysp1u"), ExtResource("13_c56n8"), ExtResource("14_wq0o8"), ExtResource("15_o4sp6")])
